Add Unsplash attribution to all images
- Added image_credit fields to 11 markdown files in writings
- Added attribution comments to 3 template files (about.njk, writings.njk, contact-hero.njk)
- Ensures compliance with Unsplash license requirements
- Attribution displays automatically on article hero images via existing template

--- a/src/_includes/partials/contact-hero.njk
+++ b/src/_includes/partials/contact-hero.njk
@@ -8,6 +8,7 @@
 <style>
   .contact-hero {
           background-image: url("/assets/images/other/patrick-fore-unsplash.jpg");
+    /* Photo by Patrick Fore (@patrickian4) on Unsplash: https://unsplash.com/photos/0gkw_9fy0eQ */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -51,4 +52,4 @@
       font-size: 1.1rem;
     }
   }
-</style> 
+</style>
