--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -8,6 +8,7 @@ eleventyNavigation:
 ---
 
   {% set image = '/assets/images/other/aaron-burden-unsplash.jpg' %}
+  {# Photo by Aaron Burden (@aaronburden) on Unsplash: https://unsplash.com/photos/xG8IQMqMITM #}
   {% set subtitle = 'Discover the journey and experiences that have shaped my path in technology, creativity, and life.' %}
   {% set hero_overlay = 'dark' %}
   {% include "partials/hero.njk" %}
