--- a/src/pages/writings.njk
+++ b/src/pages/writings.njk
@@ -9,6 +9,7 @@ eleventyNavigation:
 ---
 
 {% set image = '/assets/images/other/patrick-fore-unsplash.jpg' %}
+{# Photo by Patrick Fore (@patrickian4) on Unsplash: https://unsplash.com/photos/0gkw_9fy0eQ #}
 {% set subtitle = 'A collection of articles and insights from technology to life experiences.' %}
 {% include "partials/hero.njk" %}
 
